--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,4 +7,9 @@
             <input [(ngModel)]="hero.name" placeholder="name"/>
         </label>
     </div>
+
+    <br>
+    <br>
+    <button (click)="save()">save</button>
+    <button (click)="goBack()">go back</button>
 </div>
