--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -14,20 +14,32 @@
 
 
 <div>
-    <mat-grid-list cols="3" rowHeight="100px">
-        <mat-grid-tile [colspan]=1 [rowspan]=3 [style.background]="'lightyellow'">
+    <mat-grid-list cols="4" rowHeight="100px">
+        <mat-grid-tile [colspan]=2 [rowspan]=4 [style.background]="'lightyellow'">
             <div>
-                <li *ngFor="let hero of heroes"
-                    [class.selected]="hero === selectedHero"
-                    (click)="onSelect(hero)">
-                    <span class="badge">{{hero.id}}</span> {{hero.name}}
+                <li *ngFor="let hero of heroes">
+                    <a routerLink="/detail/{{hero.id}}">
+                        <span class="badge">{{hero.id}}</span> {{hero.name}}
+                    </a>
                 </li>
+
+                <!---Delete Hero Button-->
+            
             </div>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]=1 [rowspan]=3 [style.background]="'lightpink'">
-            <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+        <mat-grid-tile [colspan]=1 [rowspan]=4 [style.background]="'lightpink'">
+            <!---<app-hero-detail [hero]="selectedHero"></app-hero-detail>--->
+            <div>
+                <label>Hero name:
+                    <input #heroName />
+                </label>
+                <!-- (click) passes input value to add() and then clears the input -->
+                <button (click)="add(heroName.value); heroName.value=''">
+                    add
+                </button>
+            </div>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]=1 [rowspan]=3 [style.background]="'lightblue'">
+        <mat-grid-tile [colspan]=1 [rowspan]=4 [style.background]="'lightblue'">
             <app-messages></app-messages>
         </mat-grid-tile>
 
