Angular Material Practice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <body>
     <h1>{{title}}</h1>
     <nav>
-        <button mat-raised-button disabled><a routerLink="/dashboard">Dashboard</a></button>   
-        <button mat-raised-button disabled><a routerLink="/heroes">Heroes</a></button>   
+        <button mat-stroked-button><a routerLink="/dashboard">Dashboard</a></button>   
+        <button mat-stroked-button><a routerLink="/heroes">Heroes</a></button> 
+        <button mat-stroked-button><a routerLink="/UI">UI Test</a></button> 
+          
     </nav>
     <br>
 
