chartjs:bar&line

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
         <button mat-stroked-button><a routerLink="/dashboard">Dashboard</a></button>   
         <button mat-stroked-button><a routerLink="/heroes">Heroes</a></button> 
         <button mat-stroked-button><a routerLink="/UI">UI Test</a></button> 
-          
+        <button mat-stroked-button><a routerLink="/chart">Chart.js</a></button> 
+        <button mat-stroked-button><a routerLink="/d3">D3.js</a></button> 
+        
     </nav>
     <br>
 
