--- a/src/app/uitest/uitest.component.html
+++ b/src/app/uitest/uitest.component.html
@@ -124,6 +124,8 @@
     <br>
     <br>
 </mat-tab>
-<mat-tab label="ChartJS"> Content 2 </mat-tab>
-<mat-tab label="D3JS"> Content 3 </mat-tab>
+<mat-tab label="Content2">
+    Content 2 
+</mat-tab>
+<mat-tab label="Content3"> Content 3 </mat-tab>
 </mat-tab-group>
