--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
         <button mat-stroked-button><a routerLink="/heroes">Heroes</a></button> 
         <button mat-stroked-button><a routerLink="/UI">UI Test</a></button> 
         <button mat-stroked-button><a routerLink="/chart">Chart.js</a></button> 
-        <button mat-stroked-button><a routerLink="/d3">D3.js</a></button> 
+        <button mat-stroked-button><a routerLink="/d3">D3.js</a></button>
+        <button mat-stroked-button><a routerLink="/material-search">M-search</a></button>  
         
     </nav>
     <br>
