--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -2,10 +2,13 @@
     <div>
         <h3>Chart Test</h3>
     </div>
-    <div id="chart">
+    <div class="chart">
         <canvas id="barChart"></canvas>
     </div>
-    <div id="chart">
+    <div class="chart">
         <canvas id="lineChart"></canvas>
+    </div>
+    <div class="chart">
+        <canvas id="pieChart"></canvas>
     </div>
 </div>
